--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,12 @@
         "Sw0rdfish\\": "app"
       }
     },
+    "autoload-dev": {
+      "psr-4": {
+        "Sw0rdfish\\": "app",
+        "Tests\\": "tests"
+      }
+    },
     "require-dev": {
         "phpunit/phpunit": "^6.2"
     }
