- Adjusted pipelines file to install mysql database as a service on bitbucket and to store composer cache  - Do not require dotenv unless is development  - Updated SQL creation script

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -15,7 +15,16 @@ pipelines:
           - curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
           - composer install
           - vendor/bin/phpunit tests/
+          - mysql -u $MYSQL_USERNAME -p $MYSQL_PASSWORD sw0rdfish < sw0rdfish.sql
+
 definitions:
+  caches:
+    composer: /usr/local/composer
   services:
-    database:
+    mysql:
       image: mysql
+      environment:
+        MYSQL_DATABASE: sw0rdfish
+        MYSQL_RANDOM_ROOT_PASSWORD: yes
+        MYSQL_USERNAME: sw0rdfish
+        MYSQL_PASSWORD: sw0rdfish
