--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,9 @@
 {
     "require": {
-        "slim/slim": "^3.0",
+        "slim/slim": "^3.0"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^6.2",
         "vlucas/phpdotenv": "^2.4"
     },
     "autoload": {
@@ -13,8 +16,5 @@
         "Sw0rdfish\\": "app",
         "Tests\\": "tests"
       }
-    },
-    "require-dev": {
-        "phpunit/phpunit": "^6.2"
     }
 }
