--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -10,6 +10,8 @@ pipelines:
     - step:
         caches:
           - composer
+        services:
+          - mysql
         script:
           - apt-get update && apt-get install -y unzip
           - curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
@@ -24,7 +26,7 @@ definitions:
     mysql:
       image: mysql
       environment:
-        MYSQL_DATABASE: sw0rdfish
-        MYSQL_RANDOM_ROOT_PASSWORD: yes
-        MYSQL_USERNAME: sw0rdfish
-        MYSQL_PASSWORD: sw0rdfish
+        MYSQL_DATABASE: "sw0rdfish"
+        MYSQL_RANDOM_ROOT_PASSWORD: "yes"
+        MYSQL_USERNAME: "sw0rdfish"
+        MYSQL_PASSWORD: "sw0rdfish"
