--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -18,7 +18,7 @@ pipelines:
           - docker-php-ext-enable pdo pdo_mysql
           - curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
           - composer install
-          - mysql -h 127.0.0.1 -u sw0rdfish -p sw0rdfish < sw0rdfish.sql
+          - mysql -h 127.0.0.1 -u sw0rdfish_user -p sw0rdfish_password sw0rdfish < sw0rdfish.sql
           - vendor/bin/phpunit tests/
 
 definitions:
@@ -28,7 +28,7 @@ definitions:
     mysql:
       image: mysql
       environment:
-        MYSQL_DATABASE: "sw0rdfish"
-        MYSQL_RANDOM_ROOT_PASSWORD: "yes"
-        MYSQL_USERNAME: "sw0rdfish"
-        MYSQL_PASSWORD: "sw0rdfish"
+        MYSQL_DATABASE: 'sw0rdfish'
+        MYSQL_RANDOM_ROOT_PASSWORD: 'yes'
+        MYSQL_USERNAME: 'sw0rdfish_user'
+        MYSQL_PASSWORD: 'sw0rdfish_password'
