--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -18,7 +18,7 @@ pipelines:
           - docker-php-ext-enable pdo pdo_mysql
           - curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
           - composer install
-          - mysql -h 127.0.0.1 -u sw0rdfish_user -p sw0rdfish_password sw0rdfish < sw0rdfish.sql
+          - mysql --host=127.0.0.1 --user=sw0rdfish_user --password=sw0rdfish_password sw0rdfish < sw0rdfish.sql
           - vendor/bin/phpunit tests/
 
 definitions:
