bitbucket-pipelines.yml edited online with Bitbucket

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -23,7 +23,7 @@ pipelines:
 
 definitions:
   caches:
-    composer: /usr/local/composer
+    composer: vendor/
   services:
     mysql:
       image: mysql
