--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^6.2",
-        "vlucas/phpdotenv": "^2.4"
+        "vlucas/phpdotenv": "^2.4",
+        "fzaninotto/faker": "^1.7.0"
     },
     "autoload": {
       "psr-4": {
