--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -15,6 +15,7 @@ pipelines:
           - composer
           - vendor
         script:
+          - apt-get update && apt-get install -y unzip
           - curl -sS https://getcomposer.org/installer | php -- --filename=composer
           - ./composer install
         artifacts:
