--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -50,6 +50,10 @@ pipelines:
   branches:
     staging:
       - step:
+        name: Listing contents
+        script:
+          - ls -lh
+      - step:
           name: Deploy to staging
           deployment: staging
           script:
