--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -50,15 +50,98 @@ pipelines:
   branches:
     staging:
       - step:
+          name: Build source
+          caches:
+            - composer
+            - vendor
+          script:
+            - apt-get update && apt-get install -y unzip
+            - curl -sS https://getcomposer.org/installer | php -- --filename=composer
+            - ./composer install
+          artifacts:
+            - composer
+            - composer.lock
+      - step:
+          name: Test suite for SQLite
+          caches:
+            - composer
+            - vendor
+          script:
+            - apt-get update && apt-get install -y unzip sqlite3
+            - echo "STARTING TESTS WITH sqlite"
+            - cat sw0rdfish-sqlite.sql | sqlite3 sw0rdfish.db3
+            - export DB_DRIVER=sqlite
+            - ./test.sh
+      - step:
+          name: Test suite for MySql
+          caches:
+            - composer
+            - vendor
+          services:
+            - mysql
+          script:
+            - apt-get update && apt-get install -y unzip mysql-client
+            - docker-php-ext-install pdo pdo_mysql
+            - docker-php-ext-enable pdo pdo_mysql
+            - echo "STARTING TESTS WITH MYSQL"
+            - mysql --host=127.0.0.1 --user=sw0rdfish_user --password=sw0rdfish_password sw0rdfish < sw0rdfish-mysql.sql
+            - export DB_DRIVER=mysql
+            - ./test.sh
+      - step:
           name: Deploy to staging
+          caches:
+            - composer
+            - vendor
           deployment: staging
           script:
             - ./deploy.sh
+
     master:
       - step:
-          name: Deploy to production
-          deployment: production
+          name: Build source
+          caches:
+            - composer
+            - vendor
+          script:
+            - apt-get update && apt-get install -y unzip
+            - curl -sS https://getcomposer.org/installer | php -- --filename=composer
+            - ./composer install
+          artifacts:
+            - composer
+            - composer.lock
+      - step:
+          name: Test suite for SQLite
+          caches:
+            - composer
+            - vendor
+          script:
+            - apt-get update && apt-get install -y unzip sqlite3
+            - echo "STARTING TESTS WITH sqlite"
+            - cat sw0rdfish-sqlite.sql | sqlite3 sw0rdfish.db3
+            - export DB_DRIVER=sqlite
+            - ./test.sh
+      - step:
+          name: Test suite for MySql
+          caches:
+            - composer
+            - vendor
+          services:
+            - mysql
+          script:
+            - apt-get update && apt-get install -y unzip mysql-client
+            - docker-php-ext-install pdo pdo_mysql
+            - docker-php-ext-enable pdo pdo_mysql
+            - echo "STARTING TESTS WITH MYSQL"
+            - mysql --host=127.0.0.1 --user=sw0rdfish_user --password=sw0rdfish_password sw0rdfish < sw0rdfish-mysql.sql
+            - export DB_DRIVER=mysql
+            - ./test.sh
+      - step:
+          name: Deploy to staging
           trigger: manual
+          caches:
+            - composer
+            - vendor
+          deployment: staging
           script:
             - ./deploy.sh
 
