Added DB_PATH env var to be able to configure where to store the file for SQLite3. Added deployment functionality to track staging and production environments.

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -94,6 +94,7 @@ pipelines:
             - vendor
           deployment: staging
           script:
+            - apt-get update && apt-get install -y bzip2
             - ./deploy.sh
 
     master:
