- Use a specific version of mysql in the container of bitbucket

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -176,7 +176,7 @@ definitions:
     vendor: vendor/
   services:
     mysql:
-      image: mysql
+      image: mysql:5.7
       environment:
         MYSQL_DATABASE: 'sw0rdfish'
         MYSQL_RANDOM_ROOT_PASSWORD: 'yes'
